# Horizon-Europe-MDA

./: Dockerfile  README.md  pyproject.toml
backend/: api.py  main.py
backend/chroma/: chroma.sqlite3
backend/src/: create_database.py
chroma/: chroma.sqlite3
data/chromadb/: chroma.sqlite3
deployment/: README.md
frontend/learning-rate/: jest.config.ts  package-lock.json  package.json
frontend/learning-rate/src/__tests__/: home.test.tsx  homePage.test.tsx
frontend/learning-rate/src/app/: layout.tsx  page.tsx
frontend/learning-rate/src/app/about/: page.tsx
frontend/learning-rate/src/app/chatbot/: chat_component.tsx  chatbot.tsx  page.tsx
frontend/learning-rate/src/app/components/: chat_component.tsx  chatbot_info.tsx  footer.tsx  hero.tsx
frontend/learning-rate/src/app/components/header/: header.tsx
frontend/mda_webapp/: package-lock.json  package.json
notebooks/: data_exploration.ipynb  dataset_exploration.ipynb  exploration.ipynb
src/: api.py  create_database.py  query_database.py  rag_model.py  retrieval.py
tests/: test_api.py  test_retrieval.py
tests/test_chromadb/: chroma.sqlite3
