[project]
name = "mda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.1",
    "faiss-cpu>=1.10.0",
    "flask>=3.0.3",
    "langchain>=0.3.22",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.1",
    "transformers>=4.50.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
