[project]
name = "mda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "dash>=3.0.1",
    "faiss-cpu>=1.10.0",
    "flask>=3.0.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.12",
    "matplotlib>=3.10.1",
    "matplotlib>=3.10.1",
    "numpy>=1.21.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.1",
    "transformers>=4.50.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["horizon-europe-mda"]
